banar content added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="header">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utso Sarkar</title>
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
         
             <h1 class="nav-title">UT<span class="text-title">S</span>O</h1>
@@ -20,6 +20,27 @@
                 <li><button class="btn-tap">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banar">
+
+            <div class="banar-content"> 
+                <h3 class="banner-grt">Hi, I  am</h3>
+                <h1 class="banner-txt">Utso Sarkar</h1>
+                <p>Change Your Imagination into Reality | Web Application Developer | Python Developer <br> <br>I am a motivated and skilled MERN Stack web developer with a passion for building dynamic web applications. With expertise in JavaScript, React, and Node.js, I am dedicated to delivering quality results that exceed expectations and drive business success. As a lifelong learner.</p>
+                <button class="btn-tap">Download CV</button>
+                <button class="btn-tap">Contact</button>
+
+            </div>
+            <!-- banar-picture -->
+            <div class="banar-picture">
+
+                <img class="prfile-pic" src="images/hardy.png" alt="">
+
+
+            </div>
+
+
+
+        </div>
     </header>
 </body>
 </html>
