--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="banar-content"> 
                 <h3 class="banner-grt">Hi, I  am</h3>
                 <h1 class="banner-txt">Utso Sarkar</h1>
-                <p>Change Your Imagination into Reality | Web Application Developer | Python Developer <br> <br>I am a motivated and skilled MERN Stack web developer with a passion for building dynamic web applications. With expertise in JavaScript, React, and Node.js, I am dedicated to delivering quality results that exceed expectations and drive business success. As a lifelong learner.</p>
+                <p class="tect-item">Change Your Imagination into Reality | Web Application Developer | Python Developer <br> <br>I am a motivated and skilled MERN Stack web developer with a passion <br> building dynamic web applications. With expertise in JavaScript, React,<br>and Node.js, I am dedicated to delivering quality results that exceed <br>expectations and drive business success. As a lifelong learner.</p>
                 <button class="btn-tap">Download CV</button>
                 <button class="btn-tap">Contact</button>
 
@@ -42,5 +42,60 @@
 
         </div>
     </header>
+<main>
+    <section class="about">
+
+        <h3 class="section-title">About Me</h3>
+        <p class="section-text">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+
+
+
+
+    </section>
+    <section>
+
+
+
+<h3 class="section-title"> What i do</h3>
+<p  id="wid"class="section-discription">Maintaining proper communication with a helpful attitude and friendly behavior can propel a tech industry to a place of dominance. and always holding a mindset for learning and discovering new technology to boost and multiply this ratio of prospects of the company. I am eagerly excited to add this value to a developing project base environment.</p>
+
+<div class="skill-container">
+
+
+<div class="skill">
+    <img src="images/icons/js.png" alt="">
+    <h3 class="skill-title">Vanila JS</h3>
+    <p class="skilldiscription"></p>
+</div>
+<div class="skill">
+    <img src="images/icons/react.png" alt="">
+    <h3 class="skill-title">React</h3>
+    <p class="skilldiscription"></p>
+</div>
+<div class="skill">
+    <img src="images/icons/nodejs.png" alt="">
+    <h3 class="skill-title">Node JS</h3>
+    <p class="skilldiscription"></p>
+</div>
+<div class="skill">
+    <img src="images/icons/mongo.png" alt="">
+    <h3 class="skill-title">Mongo-DB</h3>
+    <p class="skilldiscription"></p>
+</div>
+
+
+
+
+</div>
+
+
+</div>
+
+    </section>
+
+
+</main>
+
 </body>
 </html>
