end the main part

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
 <div class="skill">
     <img src="images/icons/js.png" alt="">
     <h3 class="skill-title">Vanila JS</h3>
-    <p class="skilldiscription"></p>
+    <p class="skilldiscription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 </div>
 <div class="skill">
     <img src="images/icons/react.png" alt="">
     <h3 class="skill-title">React</h3>
-    <p class="skilldiscription"></p>
+    <p class="skilldiscription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 </div>
 <div class="skill">
     <img src="images/icons/nodejs.png" alt="">
     <h3 class="skill-title">Node JS</h3>
-    <p class="skilldiscription"></p>
+    <p class="skilldiscription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 </div>
 <div class="skill">
     <img src="images/icons/mongo.png" alt="">
     <h3 class="skill-title">Mongo-DB</h3>
-    <p class="skilldiscription"></p>
+    <p class="skilldiscription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
 </div>
 
 
@@ -91,8 +91,75 @@
 
 
 </div>
+
+
 
     </section>
+    <!-- resume section -->
+    <section>
+        <h3 class="section-title">
+
+
+
+
+
+            A summary of My Resume
+        </h3>
+        <div class="containerresume-">
+
+            <div class="resume-col">
+                <h3 class="resume-col-title">My Education</h3>
+
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+               
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="resume-col">
+                <h3 class="resume-col-title">My Experience</h3>
+
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+               
+                <div class="resume-item">
+                    <h2 class="resume-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-clg">Harvard University / 2015 - 2017</h3>
+                    <p class="descrp">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <div class="downloadcv">
+
+        <button class="btn-tap">Download</button>
+    </div>
 
 
 </main>
