--- a/index.html
+++ b/index.html
@@ -158,11 +158,45 @@
     </section>
     <div class="downloadcv">
 
-        <button class="btn-tap">Download</button>
+        <button class="btn-tap">Download CV</button>
     </div>
 
 
 </main>
+<footer>
+
+<div class="footer-item">
+
+<h3 class="section-title">
+ Let's Connect
+</h3>
+<p class="text-des">
+    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+</p>
+<div class="social-links">
+
+    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+    <a href=""><img src="images/icons/insta.png" alt=""></a>
+    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+</div>
+
+</div>
+<div class="footer-item">
+
+    <h3 class="section-title">
+
+Let's Message me
+
+    </h3>
+</div>
+
+
+
+
+
+
+
+</footer>
 
 </body>
 </html>
