--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
  Let's Connect
 </h3>
 <p class="text-des">
-    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+    Please fill out the form on this section to contact with me or call between <br> 9:00 A.M and 8.00 P.M ET, Monday through Friday.
 </p>
 <div class="social-links">
 
@@ -188,6 +188,12 @@
 Let's Message me
 
     </h3>
+    <form class="contact"action="">
+        <input type="text" name="" placeholder="Your Nmae:" id="">
+        <input type="email" name="" placeholder="your Email:" id="">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <button class="btn-tap"type="submit">Submit</button>
+    </form>
 </div>
 
 
